--- a/src/app/modules/developer/Components/step-one/step-one.component.html
+++ b/src/app/modules/developer/Components/step-one/step-one.component.html
@@ -4,11 +4,25 @@
       <div class="card custom-card">
         <div class="card-body">
           <h3 class="card-title">Get your profile ready in no time!</h3>
-          <p class="card-text">Add your resume or LinkedIn URL, and we'll autofill your profile to save you time.</p>
+          <p class="card-text">
+            Add your resume or LinkedIn URL, and we'll autofill your profile to save you time.
+          </p>
           <form (ngSubmit)="goToNextStep()">
             <div class="form-group">
-              <input type="file" class="form-control-file form-control" id="portfolioUpload" (change)="SelectFile($event)" accept=".docx, .pdf">
+              <input
+                type="file"
+                class="form-control-file form-control"
+                id="portfolioUpload"
+                (change)="SelectFile($event)"
+                accept=".docx, .pdf"
+              />
             </div>
+
+            <!-- Validation message for CV file -->
+            <div class="text-danger" *ngIf="isValidationVisible">
+              CV is required.
+            </div>
+
             <button type="submit" class="btn btn-primary mt-3">Continue</button>
           </form>
         </div>
