--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -2,6 +2,12 @@
   <div class="signup-form">
     <h2 class="text-center">Sign up</h2>
     <form [formGroup]="form" (ngSubmit)="send()">
+      <div class="form-group" style="margin-bottom: 20px !important;">
+        <h2 class=" m-0 p-0">Your Role</h2>
+        <button type="button" (click)="setRole('Developer')">Developer</button>
+        <button type="button" (click)="setRole('HR')"> HR</button>
+        <button type="button" (click)="setRole('Monitor')">Monitor</button>
+      </div>
       <div class="form-group">
         <label for="email">Email address</label>
         <input formControlName="Email" type="email" class="form-control" [ngClass]="{
@@ -118,13 +124,9 @@
         </div>
       </div>
 
-      <form class="form-group" >
-        <h2 class=" m-0 p-0">Your Role</h2>
-        <button type="button" (click)="setRole('Developer')">Developer</button>
-        <button type="button" (click)="setRole('HR')"> HR</button>
-        <button type="button" (click)="setRole('Monitor')">Monitor</button>
-     </form>
-      <button type="submit" [disabled]="form.invalid" class="btn btn-primary btn-block text-center justify-content-center">Sign Up</button>
+
+      <button type="submit" [disabled]="form.invalid"
+        class="btn btn-primary btn-block text-center justify-content-center">Sign Up</button>
       <p class="text-center mt-3">
         Already have an account?
         <a routerLink="/developer/login">login</a>
