--- a/src/app/shared/components/spinner/spinner.component.html
+++ b/src/app/shared/components/spinner/spinner.component.html
@@ -1,1 +1,28 @@
-<p>spinner works!</p>
+<!-- <div class="overlay">
+
+    <div class="spinner-grow w-25 h-25" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+    
+</div> -->
+<div  class="body d-flex justify-content-center align-items-center">
+
+    <div class="holder">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
+</div>
