--- a/src/app/shared/components/update_profile/update_profile.component.css
+++ b/src/app/shared/components/update_profile/update_profile.component.css
@@ -42,6 +42,11 @@ button {
 
 
  */
+ .profile-image {
+  width: 150px;  /* Example size */
+  height: 150px;
+  object-fit: cover;  /* Ensures the image fits the circle shape */
+}
 
 
  .card {
@@ -51,6 +56,7 @@ button {
   margin: 20px auto;
   padding: 20px;
   max-width: 1200px;
+  border: 4px solid  #415bcf;
 }
 
 .card-header {
@@ -90,18 +96,21 @@ button {
 }
 
 .btn {
-  width: 100%;
+  width: 40%;
   padding: 10px;
   border: none;
   border-radius: 4px;
-  background-color: #007bff;
+  background-color:  #415bcf;
   color: white;
   cursor: pointer;
+  font-size: large;
   transition: background-color 0.3s;
 }
 
 .btn:hover {
-  background-color: #0056b3;
+  background-color: #ffffff;
+  color:  #415bcf;
+  border: 2px solid  #415bcf;
 }
 
 .text-danger {
